RESOLVED FIXED89943
Pausing+unpausing before an animation begins breaks the animation
https://bugs.webkit.org/show_bug.cgi?id=89943
Summary Pausing+unpausing before an animation begins breaks the animation
Philip Rogers
Reported 2012-06-25 22:25:36 PDT
Created attachment 149454 [details] Testcase If pauseAnimations() and unpauseAnimations() are called before animations begin, the animations will never start.
Attachments
Testcase (750 bytes, text/html)
2012-06-25 22:25 PDT, Philip Rogers
no flags
Fix a bug where animations fail to start (3.99 KB, patch)
2012-06-25 22:51 PDT, Philip Rogers
no flags
Philip Rogers
Comment 1 2012-06-25 22:51:50 PDT
Created attachment 149459 [details] Fix a bug where animations fail to start I was bitten by this bug in the process of testing https://bugs.webkit.org/show_bug.cgi?id=81350 :/
Nikolas Zimmermann
Comment 2 2012-06-26 05:04:07 PDT
Comment on attachment 149459 [details] Fix a bug where animations fail to start while(1) { pdr++}, r=me.
WebKit Review Bot
Comment 3 2012-06-26 05:56:32 PDT
Comment on attachment 149459 [details] Fix a bug where animations fail to start Clearing flags on attachment: 149459 Committed r121258: <http://trac.webkit.org/changeset/121258>
WebKit Review Bot
Comment 4 2012-06-26 05:56:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.