Fix bug where animations failed to start https://bugs.webkit.org/show_bug.cgi?id=89943

Reviewed by Nikolas Zimmermann.

Source/WebCore:

The unpause code previously checked that the animations had not started
before un-setting the pause state. This meant that if an animation was
paused and unpaused before the animations started, it would remain in the
paused state. This patch simply reorders the unpause logic to fix this bug.

Test: svg/custom/animate-initial-pause-unpause.html

* svg/animation/SMILTimeContainer.cpp:
(WebCore::SMILTimeContainer::resume):

LayoutTests:

* svg/custom/animate-initial-pause-unpause-expected.txt: Added.
* svg/custom/animate-initial-pause-unpause.html: Added.


Canonical link: https://commits.webkit.org/107828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121258 268f45cc-cd09-0410-ab3c-d52691b4dbfc